（1）秒杀 （2）G1